package com.bitworks.rtb.model.db

/**
  * Base database entity.
  *
  * @author Egor Ilchenko
  */
trait BaseEntity {
  val ID: Int
}
